# azure-ddns-updater

./: .gitignore  .markdownlint.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  azure-ddns-updater.env.template  azure-ddns-updater.py  compose.yml  healthcheck.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: python-app.yml
src/: __init__.py  azure_ddns_updater.py  config.py
